fix github deploy. fix overflow

--- a/porfo-ui/src/app/app.component.scss
+++ b/porfo-ui/src/app/app.component.scss
@@ -4,8 +4,12 @@
     top:0;
     left:0;
     color:rgb(98, 0, 255);
+    width:100vw;
+    height:100vh;
+    overflow: hidden;
 }
 
 .main{
     position:absolute;
 }
+ 
